[package]
name = "sbgc-rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# simplebgc = { git = "https://github.com/CUAir/simplebgc-rs.git", version = "0.1.0" }
# simplebgc-derive = { git = "https://github.com/CUAir/simplebgc-rs.git", version = "0.1.0" }
simplebgc = {path = "../simplebgc-rs/simplebgc"}
simplebgc-derive = {path = "../simplebgc-rs/simplebgc-derive"}

tokio-serial = "5.4.3"
tokio = { version = "1", features = ["macros", "sync", "time", "rt-multi-thread"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
anyhow = "1.0.71"
futures = "0.3.28"
